test/fail/pkg/unused3.mo
module {

  // a private, unused definition
  let unused3 = 1;

}
